# mangacollec_lib

./: .gitignore  README.md  pr_body.md  pr_content.md  pyproject.toml  sandbox.py
.github/: pull_request_template.md
docs/mangacollec/: URL_ENDPOINT.md
docs/mangacollec/urls_responce/: v2_author_381c5429-93b2-494d-857d-ceb2b701f876.json  v2_authors.json  v2_collection_me.json  v2_collection_shooterdev.json  v2_edition_333eb14c-5f0a-4130-99fe-d2842cd06349.json  v2_kinds.json  v2_publisher_bdef8c9e-7395-465d-8175-a1b985d4aa92.json  v2_publishers.json  v2_serie_a320ac19-4318-4471-9e4e-eb017f4584d5.json  v2_series.json  v2_volume_6e22eae9-2afd-45ba-8c26-d10d4224d5bf.json  v2_volumes_news.json
docs/mangacollec/urls_response/: auth_token.md  authors_list_v2.md  edition_for_id_v2.md  follow_editions.md  kinds_list_v2.md  possessions_multiple.md  publisher_for_id_v2.md  publishers_list_v2.md  reads_multiple.md  serie_for_id_v2.md  series_list_v2.md  unfollow_editions.md  unreads_multiple.md  user_collection_private_v2.md  user_collection_public_v2.md  volume_for_id_v2.md  volumes_news_v2.md
docs/project/: ARCHECTECTURES.md
examples/: simple_singleton_usage.py
src/mangacollec/: __init__.py
src/mangacollec/auth/: __init__.py  auth.py
src/mangacollec/auth/entity/: __init__.py  payload_client_abstract.py  payload_client_credential.py  payload_client_password.py
src/mangacollec/auth/interfaces/: auth_interface.py
src/mangacollec/auth/responce/: __init__.py  token_responce.py
src/mangacollec/auth/response/: __init__.py  token_response.py
src/mangacollec/auth/tests/: test_auth.py
src/mangacollec/author/: __init__.py
src/mangacollec/author/converter/: author_converter.py
src/mangacollec/author/endpoint/: author_endpoint.py
src/mangacollec/author/entity/: author.py
src/mangacollec/author/exception/: __init__.py  author_exceptions.py
src/mangacollec/author/interfaces/: author_endpoint_interface.py  author_service_interface.py  use_cases_interfaces.py
src/mangacollec/author/responces/: author_responce.py  authors_responce.py
src/mangacollec/author/responses/: author_response.py  authors_response.py
src/mangacollec/client/: __init__.py  client.py
src/mangacollec/client/interfaces/: client_interface.py
src/mangacollec/client/tests/: test_client.py
src/mangacollec/core/endpoint/: base_endpoint.py
src/mangacollec/core/exception/: exception.py
src/mangacollec/core/interfaces/: converter_interface.py  endpoint_interface.py
src/mangacollec/core/services/: conversion_service.py  converter_factory.py
src/mangacollec/editions/converter/: edition_converter.py
src/mangacollec/editions/endpoint/: edition_endpoint.py
src/mangacollec/editions/entity/: edition.py
src/mangacollec/editions/exception/: edition_exceptions.py
src/mangacollec/editions/interfaces/: edition_endpoint_interface.py
src/mangacollec/editions/responses/: edition_response.py
src/mangacollec/genres/converter/: genre_converter.py
src/mangacollec/genres/endpoint/: genre_endpoint.py
src/mangacollec/genres/entity/: genre.py
src/mangacollec/genres/exception/: genre_exceptions.py
src/mangacollec/genres/interfaces/: genre_endpoint_interface.py
src/mangacollec/genres/responses/: genres_response.py
src/mangacollec/job/: __init__.py
src/mangacollec/job/converter/: job_converter.py
src/mangacollec/job/endpoint/: job_endpoint.py
src/mangacollec/job/entity/: job.py
src/mangacollec/job/exception/: __init__.py  job_exceptions.py
src/mangacollec/job/interfaces/: job_endpoint_interface.py
src/mangacollec/job/responses/: jobs_response.py
src/mangacollec/kinds/converter/: kind_converter.py
src/mangacollec/kinds/endpoint/: kind_endpoint.py
src/mangacollec/kinds/entity/: kind.py
src/mangacollec/kinds/exception/: kind_exceptions.py
src/mangacollec/kinds/interfaces/: kind_endpoint_interface.py
src/mangacollec/kinds/responses/: kinds_response.py
src/mangacollec/publishers/converter/: publisher_converter.py
src/mangacollec/publishers/endpoint/: publisher_endpoint.py
src/mangacollec/publishers/entity/: publisher.py
src/mangacollec/publishers/exception/: publisher_exceptions.py
src/mangacollec/publishers/interfaces/: publisher_endpoint_interface.py
src/mangacollec/publishers/responses/: publisher_response.py  publishers_response.py
(+37 files in other folders)
