[project]
name = "mangacollectlib"
version = "0.1.0"
description = ""
authors = [
    {name = "shooterdev",email = "vincentbleach@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[tool.mypy]
python_version = "3.13"
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
